--- a/projects/fractional-realestate-ts-contracts/package.json
+++ b/projects/fractional-realestate-ts-contracts/package.json
@@ -20,27 +20,27 @@
     "npm": ">=9.0"
   },
   "dependencies": {
-    "@algorandfoundation/algorand-typescript": "~1.0.0-beta.25 <1.0.0"
+    "@algorandfoundation/algorand-typescript": "^1.1.0"
   },
   "devDependencies": {
-    "@algorandfoundation/algokit-client-generator": "^5.0.0",
+    "@algorandfoundation/algokit-client-generator": "^6.0.1",
     "@algorandfoundation/algokit-utils": "^9.0.0",
     "@algorandfoundation/algokit-utils-debug": "^1.0.4",
-    "@algorandfoundation/puya-ts": "~1.0.0-beta.50 <1.0.0",
+    "@algorandfoundation/algorand-typescript-testing": "^1.1.0",
+    "@algorandfoundation/puya-ts": "^1.1.0",
+    "@eslint/js": "^10.0.1",
     "@rollup/plugin-typescript": "^12.1.2",
     "@tsconfig/node22": "^22.0.0",
+    "@vitest/coverage-v8": "^4.0.18",
     "algosdk": "^3.0.0",
     "better-npm-audit": "^3.11.0",
-    "dotenv": "^16.4.7",
-    "eslint": "^9.18.0",
-    "@eslint/js": "^9.18.0",
-    "typescript-eslint": "^8.19.1",
+    "dotenv": "^17.3.1",
+    "eslint": "^10.0.2",
     "prettier": "^3.4.2",
     "ts-node-dev": "^2.0.0",
-    "@algorandfoundation/algorand-typescript-testing": "~1.0.0-beta.30 <1.0.0",
-    "vitest": "^2.1.8",
-    "@vitest/coverage-v8": "^2.1.8",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.19.1",
+    "vitest": "^4.0.18"
   },
   "overrides": {
     "esbuild": "0.25.0"
