--- a/projects/fractional-realestate-ts-frontend/package.json
+++ b/projects/fractional-realestate-ts-frontend/package.json
@@ -12,27 +12,26 @@
     "npm": ">=9.0"
   },
   "devDependencies": {
-    "@algorandfoundation/algokit-client-generator": "^5.0.0",
+    "@algorandfoundation/algokit-client-generator": "^6.0.1",
+    "@eslint/js": "^10.0.1",
     "@playwright/test": "^1.35.0",
-    "@types/jest": "29.5.2",
-    "@types/node": "^18.17.14",
-    "@types/react": "^18.2.11",
-    "@types/react-dom": "^18.2.4",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
+    "@tailwindcss/vite": "^4.2.1",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^25.3.0",
+    "@types/react": "^19.2.14",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.4",
+    "daisyui": "^5.5.19",
+    "eslint": "^10.0.2",
+    "eslint-config-prettier": "^10.1.8",
     "playwright": "^1.35.0",
-    "postcss": "^8.4.24",
-    "tailwindcss": "3.3.2",
+    "tailwindcss": "^4.2.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
-    "vite": "^5.0.0",
-    "vite-plugin-node-polyfills": "^0.22.0"
+    "typescript-eslint": "^8.56.1",
+    "vite": "^7.3.1",
+    "vite-plugin-node-polyfills": "^0.25.0"
   },
   "dependencies": {
     "@algorandfoundation/algokit-utils": "^9.0.0",
@@ -43,11 +42,10 @@
     "@txnlab/use-wallet": "^4.0.0",
     "@txnlab/use-wallet-react": "^4.0.0",
     "algosdk": "^3.0.0",
-    "daisyui": "^4.0.0",
     "lute-connect": "^1.6.1",
     "notistack": "^3.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "tslib": "^2.6.2"
   },
   "scripts": {
@@ -56,18 +54,12 @@
     "build": "npm run generate:app-clients && tsc && vite build",
     "test": "jest --coverage --passWithNoTests",
     "playwright:test": "playwright test",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
+    "lint": "eslint src --max-warnings 0",
+    "lint:fix": "eslint src --max-warnings 0 --fix",
     "ci:vercel:build": "vercel build --prod --token=$VERCEL_TOKEN",
     "ci:vercel:pull": "vercel pull --yes --environment=production --token=$VERCEL_TOKEN",
     "ci:vercel:deploy": "npm run ci:vercel:build && vercel deploy --prebuilt --prod --token=$VERCEL_TOKEN",
     "preview": "vite preview"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app/jest",
-      "react-app"
-    ]
   },
   "browserslist": {
     "production": [
